# swe-agent

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  devcoach.json  docker-compose.yml  pyproject.toml  task.md
prompts/: bug_coach.md  coordinator.md  feature_coach.md  general_advisor.md  meeting_coach.md  observability.md  regret_guard.md  skeptic.md  test_strategy.md
src/: cli.py  coordinator.py  observability.py  regret_guard.py  session.py
src/agents/: bug_coach.py  factory.py  feature_coach.py  general_advisor.py  meeting_coach.py  observability.py  regret_guard.py  skeptic.py  structures.py  team.py  test_strategy.py  tools.py
src/api/: main.py  routes.py
src/config/: loader.py  settings.py
src/devcoach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/logging/: logger.py  structured.py
src/skills/: code_analyzer.txt  registry.py
src/state/: db.py  models.py  repository.py
src/swe_workflow_coach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/workflows/: base.py  bug.py  feature.py  general.py  meeting.py  playbooks.py
tests/: conftest.py  test_live_stream.py
tests/bdd/: test_bdd_workflow.py
tests/features/: coach_workflow.feature
tests/functional/: test_workflow_coach.py  test_workflow_scenarios.py
tests/integration/: test_coach_debate.py  test_vague_inputs.py
tests/unit/: test_api.py  test_deterministic_rules.py  test_general_question.py  test_parallel_orchestration.py  test_persistent_session.py  test_playbooks.py  (+4 more)
